# fsc_PegasusSimulator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_isaac.py
application/ideal_quadrotor/: 01_ideal_single_drone.py
application/px4_base/: 01_px4_single_drone.py  02_px4_multi_drone.py
application/rl/: README.md  eval_hover_policy.py  hover_env.py  rl_backend.py  train_hover_ppo.py
application/slungload/: 01_px4_single_drone_payload.py  03_px4_multi_drone_point_mass_payload.py  04_px4_multi_drone_rigid_body_payload.py  05_px4_single_drone_payload_testing.py
docs/fsc_log/: CHANGELOG_FSC.md
extensions/fsc_aerial_manipulation/: pyproject.toml  setup.py
extensions/fsc_aerial_manipulation/fsc_aerial_manipulation/constraints/: __init__.py  constraints_utils.py
extensions/fsc_aerial_manipulation/fsc_aerial_manipulation/rotorcraft/: __init__.py  rotorcraft_utils.py
extensions/fsc_aerial_manipulation/fsc_aerial_manipulation/slung_load/: __init__.py  slung_load_utils.py
extensions/fsc_aerial_manipulation/fsc_aerial_manipulation/utils/: __init__.py  lighting_utils.py  rigid_body_backend_utils.py  rotation_utils.py
extensions/pegasus.simulator/: pyproject.toml
extensions/pegasus.simulator/pegasus/simulator/assets/Robots/Iris/: iris.usd
extensions/pegasus.simulator/pegasus/simulator/logic/: state.py
extensions/pegasus.simulator/pegasus/simulator/logic/backends/: __init__.py  body_wrench_ros2_backend.py  geometric_controller_ros2_backend.py
extensions/pegasus.simulator/pegasus/simulator/logic/vehicles/: multirotor.py  vehicle.py
extensions/pegasus.simulator/pegasus/simulator/logic/vehicles/multirotors/: __init__.py  ideal_quadrotor.py  iris.py
extensions/pegasus.simulator/scripts/: patch_isaac.py
ppo_hover_tensorboard/PPO_1/: events.out.tfevents.1776012254.markz-nuc.226577.0
scripts/: README.md  common_config.sh  start_3_drone_payload_sit_testl.sh  start_3_drone_point_mass_payload_sitl.sh  start_3_drone_rigid_body_payload_sitl.sh  start_multi_drone_sitl.sh  start_single_drone_sitl.sh  start_single_drone_sitl_payload.sh  start_single_drone_sitl_payload_test.sh  terminal_utils.sh
scripts/config/: fsc_lab_machine.conf  longhao_machine.conf  markz_machine.conf  maxwell_machine.conf
scripts/isaacsim/: python_r_fsc.sh
