[project]
name = "fsc-pegasussimulator"
version = "0.1.0"
description = "Project manager for Pegasus and IsaacLab"
readme = "README.md"
authors = [{ name = "H S Helson Go", email = "hellston20a@gmail.com" }]
requires-python = ">=3.11"

# The root project depends on the local sub-package
dependencies = [
  "pegasus-simulator",
  "fsc-aerial-manipulation",
  "dotenv>=0.9.9",
  "isaacsim[all,extscache]>=5.1.0.0",
  "pymavlink>=2.4.49",
  "distro>=1.9.0",
]

[tool.uv.workspace]
members = ["extensions/pegasus.simulator", "extensions/fsc_aerial_manipulation"]

[tool.uv.sources]
pegasus-simulator = { workspace = true }
fsc-aerial-manipulation = { workspace = true }
isaacsim = [{ index = "nvidia" }]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv]
environments = ["sys_platform == 'linux'"]
override-dependencies = ["pywin32==306; sys_platform == 'win32'"]
